Enable PMD + JXR; exclude generated code; refactor for DRYness & misc fixes
- Add build/pmd/ruleset.xml (ban unnecessary FQCN) and wire maven-pmd-plugin (check + cpd, failOnViolation) with xref via maven-jxr
- Exclude generated sources from analysis: JMH (**/jmh_generated/**) and Colfer; override Checkstyle in benchmarks to skip JMH
- CLI/runtime: factor verbose filter printing & Chronicle LogMessage creation; fix peer filter/equality; simplify boolean returns; use interrupted() over Thread.interrupted(); trim noisy traces
- CXN (ThinPeer): make Chronicle base dir local; route JSON-RPC send through existing helper, track jsonRpcId, and poll by it; tidy logging
- Reflection/execution: centralize after-exec message creation in MethodDispatcher; extract helpers for type resolution and candidate selection (methods/ctors)
- Serdes: DRY JSON serializers (addProp/addSer); MessageBuilder adds TL helpers (param flyweights, context builder, header stamping) and minor unboxing/formatting fixes; qualify ColferUtils.format; set JSON-RPC version via inherited constant